Inclusão de novas melhorias no projeto

--- a/src/MBA.Gaudi.Api/appsettings.Development.json
+++ b/src/MBA.Gaudi.Api/appsettings.Development.json
@@ -6,6 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionLite": "Data Source=MBAGaudiDb"
+    "DefaultConnectionLite": "Data Source=Datafile\\MBAGaudi.db"
+  },
+  "JwtSettings": {
+    "Segredo": "A4CF385F-F9A7-4D30-9076-9E9A26362248",
+    "ExpiracaoHoras": 1,
+    "Emissor": "MBA.Gaudi",
+    "Audiencia": "https://localhost"
   }
 }
