--- a/src/MBA.Gaudi.GestaoAlunos.Application.Data/MBA.Gaudi.GestaoAlunos.Data.csproj
+++ b/src/MBA.Gaudi.GestaoAlunos.Application.Data/MBA.Gaudi.GestaoAlunos.Data.csproj
@@ -5,10 +5,24 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  
+  <ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.20">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.20" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.20" />
+	</ItemGroup>  
 
   <ItemGroup>
-    <Folder Include="Mappings\" />
     <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MBA.Gaudi.Core\MBA.Gaudi.Core.csproj" />
+    <ProjectReference Include="..\MBA.Gaudi.GestaoAlunos.Domain\MBA.Gaudi.GestaoAlunos.Domain.csproj" />
   </ItemGroup>
 
 </Project>
