--- a/src/MBA.Gaudi.GestaoConteudo/MBA.Gaudi.GestaoConteudo.Data.csproj
+++ b/src/MBA.Gaudi.GestaoConteudo/MBA.Gaudi.GestaoConteudo.Data.csproj
@@ -5,10 +5,30 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  
+    <ItemGroup>
+    <Compile Remove="Mapping\**" />
+    <EmbeddedResource Remove="Mapping\**" />
+    <None Remove="Mapping\**" />
+  </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Mappings\" />
     <Folder Include="Repository\" />
+  </ItemGroup>  
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.20" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\MBA.Gaudi.Core\MBA.Gaudi.Core.csproj" />
+    <ProjectReference Include="..\MBA.Gaudi.GestaoConteudo.Domain\MBA.Gaudi.GestaoConteudo.Domain.csproj" />
   </ItemGroup>
 
 </Project>
