Inclusão de novas melhorias no projeto

--- a/src/MBA.Gaudi.Api/MBA.Gaudi.Api.csproj
+++ b/src/MBA.Gaudi.Api/MBA.Gaudi.Api.csproj
@@ -16,6 +16,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Datafile\MBAGaudi.db" />
+    <None Remove="Datafile\MBAGaudi.db-shm" />
+    <None Remove="Datafile\MBAGaudi.db-wal" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.20">
