--- a/src/MBA.Gaudi.Api/appsettings.Development.json
+++ b/src/MBA.Gaudi.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionLite": "Data Source=Datafile\\MBAGaudi.db"
+    "DefaultConnectionLite": "Data Source=Datafile-MBAGaudi.db"
   },
   "JwtSettings": {
     "Segredo": "A4CF385F-F9A7-4D30-9076-9E9A26362248",
